Added dynamic implementation for news display

--- a/templates/views/community/includes/public-news.jade
+++ b/templates/views/community/includes/public-news.jade
@@ -2,23 +2,30 @@
   .row.full-row
     .col-md-7.image
       a(href="#")
-        img(src='images/community/farmer-news.jpg').img-responsive
+        img(src=news[0].image.secure_url).img-responsive.img-main
         .img-description
-          span.badge.tag Agriculture
-          p.title Farmer welfare and consumer health - keys to rice sector development
+          span.badge.tag 
+            = news[0].industry.name
+          p.title 
+            = news[0].title
           br
-          p.description Dr. Bruce Tolentino, IRRI deputy director general on communication and partnerships, leads the discussion during the rice working group panel of the 2017 Responsible Business Forum.
+          p.description 
+            = news[0].content.brief
       
     .col-md-5.summary
       .col-md-12.sub-news
         a(href="#").image
-          img(src='images/community/director-news.jpg').img-responsive
+          img(src=news[1].image.secure_url).img-responsive
           .img-description
-            span.badge.tag Agriculture
-            p.title IRRI Director General receives honorary degree
+            span.badge.tag 
+              = news[1].industry.name
+            p.title 
+              = news[1].title
       .col-md-12.sub-news
         a(href="#").image
-          img(src='images/community/brri-news.jpg').img-responsive
+          img(src=news[2].image.secure_url).img-responsive
           .img-description
-            span.badge.tag Agriculture
-            p.title BRRI and IRRI inaugurate Friendship Centre to achieve food security in Bangladesh
+            span.badge.tag 
+              = news[2].industry.name
+            p.title 
+              = news[2].title
