--- a/public/styles/community/public-news.less
+++ b/public/styles/community/public-news.less
@@ -3,12 +3,17 @@
     padding: 20px 31px 0px 31px;
   }
   .full-row {
-    overflow: hidden;;
+    overflow: hidden;
   }
 
   @media only screen and (min-width : 992px) {
     .full-row {
       display: flex;
+    }
+
+    .img-main {
+      width: 100% !important;
+      height: 33vw !important;
     }
 
     .full-row [class*="col-"] {
@@ -20,10 +25,15 @@
         height: 100%;
       }
       .image {
-          position: absolute;
-          height: 100%;
-          top: 0;
-          left: 0;
+        position: absolute;
+        height: 100%;
+        top: 0;
+        left: 0;
+
+        img {
+          height: auto;
+          width: auto;
+        }
       }
     }
   }
@@ -33,6 +43,8 @@
     padding-right: 0px;
 
     img {
+      width: 100%;
+      height: 40vw;
       transition: all 0.4s ease;
     }
 
