Fixed visual bug on small devices

--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -108,28 +108,28 @@
               input(type="text" name="fname" placeholder="First Name" required).form-control
             .col-xs-6.col-md-12.col-lg-6
               input(type="text" name="lname" placeholder="Last Name" required).form-control
-            .col-md-12
+            .col-xs-12
               input(type="email" name="email" placeholder="Email Address" required).form-control
-            .col-md-12
+            .col-xs-12
               input(type="password" name="password" placeholder="Password" required).form-control
-            .col-md-12
+            .col-xs-12
               label Location
               input(type="text" name="street1" placeholder="Street Address(Optional)").form-control
             .col-xs-8.col-md-12.col-lg-8
               input(type="text" name="suburb" placeholder="City/Suburb" required).form-control
             .col-xs-4.col-md-12.col-lg-4
               input(type="text" name="state" placeholder="Province" required).form-control
-            .col-md-12
+            .col-xs-12
               label(for="datepicker-dropdown") Birthday
               include datepicker-dropdown.jade
-            .col-md-12
+            .col-xs-12
               label.radio-inline
                 input(type="radio" name="sex" value="Male" checked)
                 p Male
               label.radio-inline
                 input(type="radio" name="sex" value="Female") 
                 p Female
-            .col-md-12.submit
+            .col-xs-12.submit
               button(type="submit").btn.btn-success Sign up
               p 
                 | Already have an account?
