--- a/templates/views/elearning/courseOutline.jade
+++ b/templates/views/elearning/courseOutline.jade
@@ -7,7 +7,7 @@ mixin currentCourse-grid(course)
     .row
       if course.thumbnail.exists
         .col-md-8
-          p= course.content.extended
+          span !{course.content.full}
         .col-md-4
           img(src=course._.thumbnail alt=course.title).img-rounded
       else
@@ -25,7 +25,7 @@ mixin currentCourse-grid(course)
                 else if chapter.videoId
                   img.card-img-top(src='https://img.youtube.com/vi/'+ chapter.videoId +'/mqdefault.jpg', height="150px")
                 else
-                  img.card-img-top(src="/images/image-not-available-th.png" alt=chapter.title, height="150px")
+                  img.card-img-top(src="http://placehold.it/100x100" alt=chapter.title, height="150px")
                 .caption
                   h3= chapter.title.substring(0, 50)
                   p= chapter.content.brief.substring(0, 100)
@@ -43,7 +43,7 @@ mixin currentCourse-list(course)
     .row
       if course.thumbnail.exists
         .col-md-8
-          p= course.content.extended
+          span !{course.content.full}
         .col-md-4
           img(src=course._.thumbnail alt=course.title).img-rounded
       else
@@ -55,7 +55,7 @@ mixin currentCourse-list(course)
           .panel
             table.table.table-hover
               thead
-                th Chapters in #{course.title}
+                th Lessons in #{course.title}
 
               tbody
                 each chapter in course.outline
@@ -64,14 +64,14 @@ mixin currentCourse-list(course)
                       .media-left
                         if chapter.thumbnail.exists
                           a(href=chapter.url)
-                            img(src=chapter._.thumbnail.limit(64,64) alt=chapter.title).img-rounded.media-object
+                            img(src=chapter._.thumbnail.limit(100,100) alt=chapter.title).img-rounded.media-object
                         else
                           a(href=chapter.url)
-                            img(src="/images/image-not-available.png" alt=course.title height="100px" width="100px").img-rounded.media-object
+                            img(src="http://placehold.it/100x100" alt=course.title height="100px" width="100px").img-rounded.media-object
                       .media-body
                         a(href=chapter.url)
                           h4.media-heading= chapter.title
-                          span= chapter.content.brief
+                          span !{chapter.content.brief}
       else
         h3.text-muted There are no chapters yet.
 
