--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -71,7 +71,8 @@ body {
 .analytics-body {
   /*margin-top: 85px;*/
   /*130 to accomodate main header (logo + links) and blue community header*/
-  margin-top: 70px;
+  padding-top: 70px;
+  background-color:#e7e7e7;
 }
 
 #elearning-nav {
