--- a/templates/layouts/elearning-analytics.jade
+++ b/templates/layouts/elearning-analytics.jade
@@ -18,13 +18,22 @@ html
 		//- link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ', crossorigin='anonymous')
 
 		link(rel="stylesheet" type="text/css" href="/styles/cards.css")
-
-		link(rel="stylesheet" type="text/css" href="/styles/technology.css")
-		link(rel="stylesheet" type="text/css" href="/styles/slick/slick.css")
-		link(rel="stylesheet" type="text/css" href="/styles/slick/slick-theme.css")
-		script(src='https://use.fontawesome.com/b2a273c68b.js')
+		link(rel="stylesheet" type="text/css" href="/js/highcharts/css/highcharts.css")
+		script(src='/js/highcharts/jquery.min.js')
+		script(src='/js/highcharts/jquery-3.1.1.min.js')
 		script(src='/js/d3/d3.min.js')
 		script(src='/js/d3pie/d3pie.min.js')
+		
+		script(src='/js/highcharts/highcharts.js')
+		script(src='/js/highcharts/themes/dark-unica.js')
+		script(src='/js/highcharts/modules/stock.js')
+		script(src='/js/highcharts/modules/map.js')
+		script(src='/js/highcharts/modules/exporting.js')
+		script(src='/js/highcharts/modules/data.js')
+		script(src='/js/highcharts/modules/heatmap.js')
+		script(src='/js/highcharts/modules/treemap.js')
+		script(src='/js/highcharts/custom/world.js')
+
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
@@ -179,7 +188,7 @@ html
 		//- jQuery 1.11.3 is included by default, and required by both Bootstrap
 		//- and the KeystoneJS Content Editor. If you are not targeting IE8,
 		//- you can upgrade to 2.1.4 (also bundled) for better performance.
-		script(src='/js/jquery/jquery-1.11.3.min.js')
+		//script(src='/js/jquery/jquery-1.11.3.min.js')
 
 		//- Customise which Bootstrap javascript files are served by including
 		//- them specifically here, instead of bootstrap-3.3.5.min.js
