--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -5,52 +5,52 @@ block css
 
 mixin Most(mostpopular, mostcommented, mostreacted, numCourses, numLO, numUsers)
     .row
-      .col-md-6.col-xs-6
-        div(id="viewsGraph")
-        div(id="commentsGraph")
-        div(id="reactionsPieChart")
-      .col-md-6.col-xs-6
+      .col-md-12.col-xs-12
+        //h3.horizontalLabel Total Number of Vists
+        div(id="allVisit")
+      .col-md-8.col-xs-8
+        div(id="userVisitsWorld")
+        div(id="userViewByISP")
+        //div(id="reactionsPieChart")
+      .col-md-4.col-xs-4
         .panel.panel-info
           .panel-heading
             h4.panel-title MOST POPULAR
           .panel-body.bg-grey
             .media
               .media-left
-                  img(src=mostpopular.thumbnail.exists ? mostpopular._.thumbnail.limit(100, 100) : 'http://placehold.it/100x100', width=100, height=100).img-circle
+                  img(src=mostpopular.thumbnail.exists ? mostpopular._.thumbnail.limit(50, 50) : 'http://placehold.it/50x50', width=50, height=50).img-circle
               .media-body
                 h5=mostpopular.title
-                span= mostpopular.content.brief.substring(0, 50)
-        .panel.panel-info
+        .panel.panel-success
           .panel-heading
             h4.panel-title MOST COMMENTED
           .panel-body.bg-grey
             .media
               .media-left
-                img(src=mostcommented.thumbnail.exists ? mostcommented._.thumbnail.limit(100, 100) : 'http://placehold.it/100x100', width=100, height=100).img-circle
+                img(src=mostcommented.thumbnail.exists ? mostcommented._.thumbnail.limit(50, 50) : 'http://placehold.it/50x50', width=50, height=50).img-circle
               .media-body
                 h5=mostcommented.title
-                span= mostcommented.content.brief.substring(0, 50)
-        .panel.panel-info
+        .panel.panel-warning
           .panel-heading
             h4.panel-title MOST REACTED
           .panel-body.bg-grey
             .media
               .media-left
-                img(src=mostreacted.thumbnail.exists ? mostreacted._.thumbnail.limit(100, 100) : 'http://placehold.it/100x100', width=100, height=100).img-circle
+                img(src=mostreacted.thumbnail.exists ? mostreacted._.thumbnail.limit(50, 50) : 'http://placehold.it/50x50', width=50, height=50).img-circle
               .media-body
                 h5=mostreacted.title
-                span= mostreacted.content.brief.substring(0, 50)
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-book(aria-hidden='true')
-          |  TOTAL NUMBER OF COURSES: 
+          |  NUMBER OF COURSES: 
           span= numCourses
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-file(aria-hidden='true')
-          |  TOTAL NUMBER OF LEARNING OBJECTS: 
+          |  NUMBER OF LEARNING OBJECTS: 
           span= numLO
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-user(aria-hidden='true')
-          |  TOTAL NUMBER OF USERS: 
+          |  NUMBER OF USERS: 
           span= numUsers
       
 block content
@@ -78,5 +78,6 @@ block content
                   a(href='/elearning/analytics/recommendedViews') Analytics of Recommended Learning Objects
       .col-md-9.col-sm-4.dashboard
         +Most(data.mostPopularLO, data.mostCommentedLO, data.mostReactedLO, data.numCourses, data.numLO, data.numUsers)
-  script(src='/js/elearning-graphs/learningObjectReactions.js')
-  script(src='/js/elearning-graphs/learningObjectCommentsViews.js')
+  //script(src='/js/elearning-graphs/learningObjectReactions.js')
+  //script(src='/js/elearning-graphs/learningObjectCommentsViews.js')
+  script(src='/js/elearning-graphs/userviewmap.js')
