--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -29,3 +29,4 @@
 @import "eresources/eresources.less";
 @import "eresources/publications.less";
 @import "elearning/elearning.less";
+@import "fontawesome/less/font-awesome.less";
