--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -20,7 +20,7 @@ html
     link(rel="stylesheet" type="text/css" href="/styles/cards.css")
 
     link(rel="stylesheet" type="text/css" href="/styles/technology.css")
-    script(src='https://use.fontawesome.com/b2a273c68b.js')
+    //- script(src='https://use.fontawesome.com/b2a273c68b.js')
 
     //- This file provides the default styling for the KeystoneJS Content Editor
     if user && user.canAccessKeystone
