--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -90,7 +90,7 @@ body {
 
 .elearning-breadcrumb li a {
   color: #FBFBFB;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .elearning-breadcrumb li a:hover {
