--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -92,6 +92,5 @@ block content
         +Most(data.mostPopularLO, data.mostCommentedLO, data.mostReactedLO, data.numCourses, data.numLO, data.numUsers)
   //- script(src='/js/elearning-graphs/learningObjectReactions.js')
   //- script(src='/js/elearning-graphs/learningObjectCommentsViews.js')
-//- block js
-  //script(src='/js/elearning-graphs/userviewmap.js')
-  //- script(src='/js/elearning-graphs/try.js')
+ block js
+  script(src='/js/elearning-graphs/dashboard-charts.js')
