--- a/templates/views/elearning/analyticsLOList.jade
+++ b/templates/views/elearning/analyticsLOList.jade
@@ -26,7 +26,7 @@ block content
                   a(href='/elearning/analytics/users') Analytics of Users
                 li
                   a(href='/elearning/analytics/recommendedViews') Analytics of Recommended Learning Objects
-      .col-md-9.col-sm-4.dashboard
+      .col-md-9.col-sm-4.dashboard.white-bg
         .dropdown
           | Filter by 
           button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="true")
