--- a/templates/layouts/elearning-analytics.jade
+++ b/templates/layouts/elearning-analytics.jade
@@ -20,11 +20,8 @@ html
 		//- link(rel="stylesheet" type="text/css" href="/styles/cards.css")
 		//- link(rel="stylesheet" type="text/css" href="/js/highcharts/css/highcharts.css")
 		
-		//- script(src='/js/d3/d3.min.js')
-		//- script(src='/js/d3pie/d3pie.min.js')
-		
-		
-
+		script(src='/js/d3/d3.min.js')
+		script(src='/js/d3pie/d3pie.min.js')
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
@@ -192,7 +189,7 @@ html
 		script(src='/bower_components/highcharts/modules/treemap.js')
 		script(src='/bower_components/highcharts/modules/heatmap.js')
 		script(src='/js/highcharts/custom/world.js')
-		script(src='/js/elearning-graphs/userviewmap.js')
+		
 
 		//- Customise which Bootstrap javascript files are served by including
 		//- them specifically here, instead of bootstrap-3.3.5.min.js
