--- a/templates/views/elearning/analyticsUsersList.jade
+++ b/templates/views/elearning/analyticsUsersList.jade
@@ -26,7 +26,7 @@ block content
                   a(href='/elearning/analytics/users') Analytics of Users
                 li
                   a(href='/elearning/analytics/recommendedViews') Analytics of Recommended Learning Objects
-      .col-md-9.col-sm-4.dashboard
+      .col-md-9.col-sm-4.dashboard.white-bg
         .table-responsive
           table.table.table-hover
             tr
