--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -25,6 +25,7 @@
 
 // Add your own site style includes here
 @import "site/layout.less";
+@import "community/news.less";
 @import "community/community.less";
 @import "community/public-news.less";
 @import "community/public-content.less";
