--- a/templates/layouts/elearning-analytics.jade
+++ b/templates/layouts/elearning-analytics.jade
@@ -182,13 +182,17 @@ html
 		script(src='/js/highcharts/jquery-3.1.1.min.js')
 
 		script(src='/bower_components/highcharts/highcharts.js')
+		script(src='/bower_components/highcharts/highcharts-more.js')
 		script(src='/bower_components/highcharts/modules/stock.js')
 		script(src='/bower_components/highcharts/modules/map.js')
 		script(src='/bower_components/highcharts/modules/exporting.js')
 		script(src='/bower_components/highcharts/modules/data.js')
 		script(src='/bower_components/highcharts/modules/treemap.js')
 		script(src='/bower_components/highcharts/modules/heatmap.js')
+		script(src='/bower_components/highcharts/modules/drilldown.js')
+		script(src='/bower_components/highcharts/modules/solid-gauge.js')
 		script(src='/js/highcharts/custom/world.js')
+		script(src='/js/highcharts/custom/ph-all.js')
 		
 
 		//- Customise which Bootstrap javascript files are served by including
