--- a/public/styles/analytics.css
+++ b/public/styles/analytics.css
@@ -77,7 +77,7 @@
 
 #userViewByISP{
   min-width: 310px;
-  max-width: 700px;
+  max-width: 900px;
   height: 400px;
   margin-bottom: 3%;
 }
@@ -106,6 +106,10 @@
 #popularperregion{
   height: 400px;
   min-width: 310px;
-  max-width: 480px;
-  margin: 0 auto
+  max-width: 600px;
+  margin-bottom: 3%;
+}
+.glyphicon-star{
+  font-size: 20px;
+  color: yellow;
 }
