--- a/templates/views/elearning/analytics.jade
+++ b/templates/views/elearning/analytics.jade
@@ -3,7 +3,7 @@ extends ../../layouts/elearning-analytics
 block css
   link(rel="stylesheet" type="text/css" href="/styles/analytics.css")
 
-mixin Most(mostpopular, mostcommented, mostreacted, numCourses, numLO, numUsers)
+mixin Most(mostpopular, mostcommented, mostreacted, numCourses, numLO, numUsers, numViews, numComments, numReactions, topTopicsbyRatings)
     .row
       .col-md-12.col-xs-12
         //- h3.horizontalLabel Total Number of Vists
@@ -39,15 +39,10 @@ mixin Most(mostpopular, mostcommented, mostreacted, numCourses, numLO, numUsers)
                 img(src=mostreacted.thumbnail.exists ? mostreacted._.thumbnail.limit(50, 50) : 'http://placehold.it/50x50', width=50, height=50).img-circle
               .media-body
                 h5=mostreacted.title
-      .col-md-7.col-xs-7
-        //- h3.horizontalLabel Total Number of Vists
-        div(id="userViewByISP")
-      .col-md-5.col-xs-5
+      .col-md-8.col-xs-8
         //- h3.horizontalLabel Total Number of Vists
         //- div(id="allReactionsRatio")
         div(id="popularperregion")
-      .col-md-8.col-xs-8
-        div(id="allComments")
       .col-md-4.col-xs-4  
         .well.well-sm.centered-panel
           span.glyphicon.glyphicon-book(aria-hidden='true')
@@ -62,14 +57,34 @@ mixin Most(mostpopular, mostcommented, mostreacted, numCourses, numLO, numUsers)
           |  NUMBER OF USERS: 
           span= numUsers
         .well.well-sm.centered-panel
-          span.glyphicon.glyphicon-user(aria-hidden='true')
-          |  NUMBER OF VIEWS: 190918
+          span.glyphicon.glyphicon-signal(aria-hidden='true')
+          |  NUMBER OF VIEWS: 
+          span= numViews
         .well.well-sm.centered-panel
-          span.glyphicon.glyphicon-user(aria-hidden='true')
-          |  NUMBER OF REACTIONS: 2190
+          span.glyphicon.glyphicon-thumbs-up(aria-hidden='true')
+          |  NUMBER OF REACTIONS: 
+          span= numReactions
         .well.well-sm.centered-panel
-          span.glyphicon.glyphicon-user(aria-hidden='true')
-          |  NUMBER OF COMMENTS: 826
+          span.glyphicon.glyphicon-comment(aria-hidden='true')
+          |  NUMBER OF COMMENTS: 
+          span= numComments
+      .col-md-8.col-xs-8
+        //- h3.horizontalLabel Total Number of Vists
+        div(id="userViewByISP")
+      .col-md-4.col-xs-4
+        .panel.panel-info
+          .panel-heading
+            h4.panel-title Top 5 Learning Object by Rating
+          .panel-body.bg-grey
+            each lo in topTopicsbyRatings
+              .media
+                .media-left
+                    img(src=lo.thumbnail.exists ? lo._.thumbnail.limit(50, 50) : 'http://placehold.it/50x50', width=50, height=50).img-circle
+                .media-body
+                  h5=lo.title
+                  - for (var i = 0; i < lo.rating; ++i) {
+                    span.glyphicon.glyphicon-star(aria-hidden='true')
+                  - }
       .col-md-12.col-xs-12
         //- h3.horizontalLabel Total Number of Vists
         div(id="allReactions")
@@ -98,7 +113,7 @@ block content
                 li
                   a(href='/elearning/analytics/recommendedViews') Analytics of Recommended Learning Objects
       .col-md-9.col-sm-4.dashboard
-        +Most(data.mostPopularLO, data.mostCommentedLO, data.mostReactedLO, data.numCourses, data.numLO, data.numUsers)
+        +Most(data.mostPopularLO, data.mostCommentedLO, data.mostReactedLO, data.numCourses, data.numLO, data.numUsers, data.numViews, data.numComments, data.numReactions, data.topTopicsbyRatings)
   //- script(src='/js/elearning-graphs/learningObjectReactions.js')
   //- script(src='/js/elearning-graphs/learningObjectCommentsViews.js')
  block js
