--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -67,6 +67,7 @@ body {
   /*margin-top: 85px;*/
   /*130 to accomodate main header (logo + links) and blue community header*/
   margin-top: 100px;
+  margin-bottom: 80px;
 }
 .analytics-body {
   /*margin-top: 85px;*/
@@ -125,4 +126,9 @@ body {
   /*margin-top: 85px;*/
   /*130 to accomodate main header (logo + links) and blue community header*/
   margin-top: 60px;
+}
+
+.elearning-page-header {
+  margin: 10px 0 20px 0px;
+  border-bottom: 1px solid #eee;
 }
