--- a/templates/views/elearning/learningObject.jade
+++ b/templates/views/elearning/learningObject.jade
@@ -110,6 +110,8 @@ block content
               a(href="/elearning/courses") Other Topics
             .panel-body
               +otherTopics(data.otherLO)
+        .row
+          +feedback()
     
 mixin learningObject(currentLO)
   .row
@@ -312,3 +314,12 @@ mixin otherTopics(otherLO)
           span= lo.content.brief.substring(0, 50)
 
     
+mixin feedback(action)
+  .panel.panel-info
+    .panel-heading
+      | Feedback
+    .panel-body
+      if user
+        a.btn.btn-link(href='/elearning/feedback') Give a feedback!
+      else
+        a.btn.btn-link(href='/keystone/signin?from=/elearning/feedback') Sign in to give a feedback!
