--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -117,6 +117,9 @@ html
       //- Remember to include it in your templates when you override the intro and content blocks!
 
       //- The Intro block appears above flash messages (used for temporary information display)
+
+      block sidenav
+        
       .elearning-body
         block intro
 
