Refactoring elearning analytics

--- a/templates/views/elearning/elearning.jade
+++ b/templates/views/elearning/elearning.jade
@@ -120,7 +120,7 @@ block content
         .panel-body
           +recommended(data.recommendedLearningObjects)
         .panel-footer
-          a(href='/elearning/learning-objects?').btn.btn-link View All Recommended Lessons
+          a(href='/elearning/:userid/recommended?').btn.btn-link View All Recommended Lessons
 
   .container
     .panel.panel-default
