Added initial view for analytics page

--- a/templates/views/community/includes/public-analytics.jade
+++ b/templates/views/community/includes/public-analytics.jade
@@ -1,13 +1,22 @@
 #public-analytics.row
-  .section.col-md-8 
-    .section-title.focus.row 
-      .title.col-md-3.col-xs-3
-        .skew.col-xs-12
-        #temp.skewed-text Demographics
-    #map.section-content
-    
-  .section.col-md-4
-    .section-title.focus.row 
-      .title.col-md-3.col-xs-3
-        p Statistics
-    #chart.section-content
+  //- .section.col-md-8 
+  //-   .section-title.focus.row 
+  //-     .title.col-md-3.col-xs-3
+  //-       .skew.col-xs-12
+  //-       #temp.skewed-text Demographics
+  //-   #map.section-content
+  //-   
+  //- .section.col-md-4
+  //-   .section-title.focus.row 
+  //-     .title.col-md-3.col-xs-3
+  //-       p Statistics
+  //-   #chart.section-content
+  
+  .section.col-md-12
+    .section-content
+      br
+      h2.text-center Analytics
+      h4.text-center User activities are measured in order to optimze and enrich the experience of a social community.
+      button.btn.btn-lg.btn-warning Learn More
+      br
+      br
