--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -167,5 +167,14 @@
         a(href="images/exhibit/knifefish.jpg").col-md-2.col-sm-4.col-xs-6
           .img-wrapper
             img(src='images/exhibit/knifefish.jpg').photo.img-responsive
-  
-  include public-analytics.jade
+            
+  #public-analytics.row
+    .section.col-md-12
+      .section-content.text-center
+        br
+        h2.text-center Analytics
+        h4.text-center User activities are measured in order to optimze and enrich the experience of a social community.
+        a(href="community/analytics")
+          button.btn.btn-lg.btn-warning Learn More
+        br
+        br
