--- a/public/styles/community/community-analytics.less
+++ b/public/styles/community/community-analytics.less
@@ -1,7 +1,7 @@
 #community-analytics {
   background-color: #F1F1F1;
-  padding: 0;
-  padding-top: 150px;
+  padding: 0px 20px;
+  padding-top: 65px;
   padding-bottom: 20px;
 
   .section {
