--- a/templates/views/community/includes/public-news.jade
+++ b/templates/views/community/includes/public-news.jade
@@ -1,24 +1,19 @@
 .container-fluid
   .row.full-row
     .col-md-7.image
-      a(href='community/news/'+news[0].slug)
-        img(src=news[0].image.secure_url).img-responsive.img-main
+      a(href='blog/post/'+news.slug)
+        img(src=news.image.secure_url).img-responsive.img-main
         .img-description
-          span.badge.tag #{news[0].industry.name}
-          p.title #{news[0].title}
+          span.badge.tag #{news.categories.name}
+          p.title #{news.title}
           br
-          p.description #{news[0].content.brief}
+          p.description !{news.caption}
       
     .col-md-5.summary
-      .col-md-12.sub-news
-        a(href='community/news/'+news[1].slug).image
-          img(src=news[1].image.secure_url).img-responsive
-          .img-description
-            span.badge.tag #{news[1].industry.name}
-            p.title #{news[1].title}
-      .col-md-12.sub-news
-        a(href='community/news/'+news[2].slug).image
-          img(src=news[2].image.secure_url).img-responsive
-          .img-description
-            span.badge.tag #{news[2].industry.name}
-            p.title #{news[2].title}
+      each article in commNews
+        .col-md-12.sub-news
+          a(href='blog/post/'+article.slug).image
+            img(src=article.image.secure_url).img-responsive
+            .img-description
+              span.badge.tag #{article.categories.name}
+              p.title !{article.title}
